--- a/css/extra/friends.css
+++ b/css/extra/friends.css
@@ -1,3 +1,33 @@
+
+/* ---------------------------------------- Farnaz ---------------------------------------- */
+[user_by_bdfdb="690597954414706758"] >
+.da-topSectionNormal {
+    background: url('https://cdn.discordapp.com/attachments/690604664860704889/787990951826030602/image0.jpg') center/cover no-repeat ;
+}
+[user_by_bdfdb="690597954414706758"] >
+.da-topSectionPlaying {
+    background: url('https://cdn.discordapp.com/attachments/690604664860704889/787990951826030602/image0.jpg') center/cover no-repeat ;
+
+}
+[user_by_bdfdb="690597954414706758"] >
+.da-topSectionSpotify{
+    background: url('https://cdn.discordapp.com/attachments/690604664860704889/787990951826030602/image0.jpg') center/cover no-repeat ;
+}
+[user_by_bdfdb="690597954414706758"] >
+.da-header {
+    background: url('https://cdn.discordapp.com/attachments/690604664860704889/787990952069038100/image1.jpg') center/cover no-repeat ;
+}
+
+.avatar-1BDn8e[src*="690597954414706758"] + h2 > .headerText-3Uvj1Y > .username-1A8OIy::after {content: "";
+    background-image: url('https://static.thenounproject.com/png/160062-200.png');}
+.avatar-1BDn8e[src*="690597954414706758"] + h2 > .headerText-3Uvj1Y > .username-1A8OIy:hover::after {
+    content: "Friend";
+    animation: fadeIn .5s linear 1;
+    color: #7d864b;
+    width: 80px;
+    text-align: center;
+    background-color: transparent;
+}
 /* ---------------------------------------- AmirReza ---------------------------------------- */
 [user_by_bdfdb="650993831663239169"] >
 .da-topSectionNormal {
