--- a/css/extra/devs.css
+++ b/css/extra/devs.css
@@ -1,3 +1,7 @@
+.da-circleButtonMask{
+  top: 20px;
+}
+
 /* ---------------------------------------- Hadi ---------------------------------------- */
 [user_by_bdfdb="490519932292038659"] >
 .da-topSectionPlaying {
