--- a/css/extra/friends.css
+++ b/css/extra/friends.css
@@ -1,3 +1,32 @@
+/* ---------------------------------------- Nima ---------------------------------------- */
+[user_by_bdfdb="366997934983872512"] >
+.da-topSectionNormal {
+  background: url('https://cdn.discordapp.com/attachments/721688979480641556/789572943444181052/andrew-neel-JBfdCFeRDeQ-unsplash.jpg') center/cover no-repeat ;
+}
+[user_by_bdfdb="366997934983872512"] >
+.da-topSectionPlaying {
+    background: url('https://cdn.discordapp.com/attachments/721688979480641556/789572943444181052/andrew-neel-JBfdCFeRDeQ-unsplash.jpg') center/cover no-repeat ;
+
+}
+[user_by_bdfdb="366997934983872512"] >
+.da-topSectionSpotify{
+    background: url('https://cdn.discordapp.com/attachments/721688979480641556/789572943444181052/andrew-neel-JBfdCFeRDeQ-unsplash.jpg') center/cover no-repeat ;
+}
+[user_by_bdfdb="366997934983872512"] >
+.da-header {
+    background: url('https://cdn.discordapp.com/attachments/690604664860704889/787990952069038100/image1.jpg') center/cover no-repeat ;
+}
+
+.avatar-1BDn8e[src*="366997934983872512"] + h2 > .headerText-3Uvj1Y > .username-1A8OIy::after {content: "";
+    background-image: url('https://static.thenounproject.com/png/160062-200.png');}
+.avatar-1BDn8e[src*="366997934983872512"] + h2 > .headerText-3Uvj1Y > .username-1A8OIy:hover::after {
+    content: "Friend";
+    animation: fadeIn .5s linear 1;
+    color: #7d864b;
+    width: 80px;
+    text-align: center;
+    background-color: transparent;
+}
 
 /* ---------------------------------------- Farnaz ---------------------------------------- */
 [user_by_bdfdb="690597954414706758"] >
