--- a/css/extra/friends.css
+++ b/css/extra/friends.css
@@ -53,15 +53,15 @@
 }
 [user_by_bdfdb="626144497641717800"] >
 .da-topSectionNormal {
-    background: url('https://cdn.discordapp.com/attachments/690604664860704889/789763524791500810/image0.jpeg') center/cover no-repeat;
+    background: url('https://cdn.discordapp.com/attachments/751514674050236498/789764208030908416/image1.jpg') center/cover no-repeat;
 }
 [user_by_bdfdb="626144497641717800"] >
 .da-topSectionSpotify {
-    background: url('https://cdn.discordapp.com/attachments/690604664860704889/789763524791500810/image0.jpeg') center/cover no-repeat;
+    background: url('https://cdn.discordapp.com/attachments/751514674050236498/789764208030908416/image1.jpg') center/cover no-repeat;
 }
 [user_by_bdfdb="626144497641717800"] >
 .da-topSectionPlaying {
-    background: url('https://cdn.discordapp.com/attachments/690604664860704889/789763524791500810/image0.jpeg') center/cover no-repeat;
+    background: url('https://cdn.discordapp.com/attachments/751514674050236498/789764208030908416/image1.jpg') center/cover no-repeat;
 }
 .avatar-1BDn8e[src*="626144497641717800"] + h2 > .headerText-3Uvj1Y > .username-1A8OIy::after {content: "";
   background-image: url('https://static.thenounproject.com/png/160062-200.png');}
