--- a/css/extra/friends.css
+++ b/css/extra/friends.css
@@ -128,6 +128,23 @@
     text-align: center;
     background-color: transparent;
 }
+[user_by_bdfdb="690597954414706758"] + .header-23xsNx .username-1A8OIy {
+    background-image: linear-gradient(to left, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
+    animation: gradient-border 6s linear infinite;
+    background-size: 400% 100%;
+    color: transparent !important;
+    -webkit-background-clip: text;
+    
+}
+@keyframes gradient-border {
+    0%, 200% {
+        background-position: 0 0;
+    }
+
+    99.999999999999999% {
+        background-position: 130% 0;
+    }
+}
 /* ---------------------------------------- AmirReza ---------------------------------------- */
 [user_by_bdfdb="650993831663239169"] >
 .da-topSectionNormal {
