--- a/css/extra/devs.css
+++ b/css/extra/devs.css
@@ -265,3 +265,11 @@
     background: #010101;
     z-index: 2;
 }
+/* --- */
+.modeSelected-346R90 .name-23GUGE, .modeConnected-3IsKId .name-23GUGE{
+  background-image: linear-gradient(to left, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
+  animation: gradient-border 6s linear infinite;
+  background-size: 400% 100%;
+  color: transparent !important;
+  -webkit-background-clip: text;
+}
