--- a/css/extra/devs.css
+++ b/css/extra/devs.css
@@ -20,15 +20,15 @@
 /* ---------------------------------------- Hadi ---------------------------------------- */
 [user_by_bdfdb="490519932292038659"] >
 .da-topSectionPlaying {
-    background: url('https://images3.persgroep.net/rcs/8e4HFYV59yv2OYrUxzIyEJ7YTC8/diocontent/148587116/_fitwidth/763?appId=93a17a8fd81db0de025c8abd1cca1279&quality=0.8&desiredformat=webp') center/cover no-repeat;
+    background: url('https://cdn.discordapp.com/attachments/781967702834675743/789780459277254686/tenor.gif') center/cover no-repeat;
 }
 [user_by_bdfdb="490519932292038659"] >
 .da-topSectionNormal{
-    background: url('https://images3.persgroep.net/rcs/8e4HFYV59yv2OYrUxzIyEJ7YTC8/diocontent/148587116/_fitwidth/763?appId=93a17a8fd81db0de025c8abd1cca1279&quality=0.8&desiredformat=webp') center/cover no-repeat;
+    background: url('https://cdn.discordapp.com/attachments/781967702834675743/789780459277254686/tenor.gif') center/cover no-repeat;
 }
 [user_by_bdfdb="490519932292038659"] >
 .da-topSectionSpotify{
-    background: url('https://images3.persgroep.net/rcs/8e4HFYV59yv2OYrUxzIyEJ7YTC8/diocontent/148587116/_fitwidth/763?appId=93a17a8fd81db0de025c8abd1cca1279&quality=0.8&desiredformat=webp') center/cover no-repeat;
+    background: url('https://cdn.discordapp.com/attachments/781967702834675743/789780459277254686/tenor.gif') center/cover no-repeat;
 }
 [user_by_bdfdb="490519932292038659"] >
 .da-header {    
