--- a/css/extra/friends.css
+++ b/css/extra/friends.css
@@ -157,7 +157,7 @@
 }
 
 .userPopout-3XzG_A .avatarWrapper-3H_478[user_by_bdfdb*="650993831663239169"]+.headerText-2sdzFM .headerTag-2pZJzA:after {
-    content: 'Developer';
+    content: 'Bot Dev';
     position: absolute;
     top: 10px;
     right: 5px;
