--- a/css/extra/main.css
+++ b/css/extra/main.css
@@ -23,7 +23,7 @@
 /* Main */
 :root {    
 --background-image: url('https://cdn.discordapp.com/attachments/219022400233275392/304585796130963456/firewatch_5.jpg');
---friends-icon: url('https://cdn.icon-icons.com/icons2/2108/PNG/512/discord_icon_130958.png');
+--friends-icon: url('https://cdn.discordapp.com/attachments/651756043650727957/789789739536220180/1.gif');
 --friends-icon-position: center center;
 --friends-icon-zoom: 100%;
 --unread-server-animation: rainbow;
