--- a/css/extra/devs.css
+++ b/css/extra/devs.css
@@ -32,7 +32,7 @@
 }
 [user_by_bdfdb="490519932292038659"] >
 .da-header {    
-    background: url('https://data.whicdn.com/images/326108422/original.gif') center/cover no-repeat;
+    background: url('https://i.pinimg.com/originals/33/0d/36/330d36e0d3d97432117e62b9bb5a2b81.gif') center/cover no-repeat;
 }
 
 .avatar-1BDn8e[src*="490519932292038659"] + h2 > .headerText-3Uvj1Y > .username-1A8OIy::after {content: "";
