--- a/css/extra/main.css
+++ b/css/extra/main.css
@@ -96,3 +96,6 @@ html:only-child > head + body > div#app-mount.appMount-3lHmkl > div.app-1q1i1E >
     transform: unset !important;
     animation: unset !important;
 }
+.wrapper-35wsBm{
+    background-color:transparent;
+}
