--- a/css/extra/friends.css
+++ b/css/extra/friends.css
@@ -1,5 +1,32 @@
-/* ---------------------------------------- Kian ---------------------------------------- */
+/* ---------------------------------------- Mhdie ---------------------------------------- */
 
+[user_by_bdfdb="592088843109400665"] >
+.da-topSectionNormal {
+    background: url('https://giffiles.alphacoders.com/121/12113.gif') center/cover no-repeat ;
+}
+[user_by_bdfdb="592088843109400665"] >
+.da-topSectionPlaying {
+    background: url('https://giffiles.alphacoders.com/121/12113.gif') center/cover no-repeat ;
+}
+[user_by_bdfdb="592088843109400665"] >
+.da-topSectionSpotify{
+    background: url('https://giffiles.alphacoders.com/121/12113.gif') center/cover no-repeat ;
+}
+[user_by_bdfdb="592088843109400665"] >
+.da-header {
+  background: url('https://cdn.discordapp.com/attachments/510041414135054336/790091715015999508/pp.jpg') center/cover no-repeat ;
+}
+.avatar-1BDn8e[src*="592088843109400665"] + h2 > .headerText-3Uvj1Y > .username-1A8OIy::after {content: "";
+    background-image: url('https://static.thenounproject.com/png/160062-200.png');}
+.avatar-1BDn8e[src*="592088843109400665"] + h2 > .headerText-3Uvj1Y > .username-1A8OIy:hover::after {
+    content: "Friend";
+    animation: fadeIn .5s linear 1;
+    color: #7d864b;
+    width: 80px;
+    text-align: center;
+    background-color: transparent;
+}
+/* ---------------------------------------- Kian ---------------------------------------- */
 [user_by_bdfdb="717281532590424084"] >
 .da-topSectionNormal {
     background: url('https://cdn.discordapp.com/attachments/789881827128115200/789883335039909898/tgfr.gif') center/cover no-repeat ;
