--- a/css/extra/main.css
+++ b/css/extra/main.css
@@ -65,6 +65,9 @@
     text-overflow:ellipsis;
 }
 
+#bd-pub-li #bd-pub-button {
+    visibility: hidden;
+}
 .da-expandedFolderBackground{
   opacity: 30%;
 }
