--- a/css/extra/main.css
+++ b/css/extra/main.css
@@ -100,3 +100,10 @@ html:only-child > head + body > div#app-mount.appMount-3lHmkl > div.app-1q1i1E >
 .wrapper-35wsBm{
     background-color:transparent;
 }
+.scroller-zPkAnE {
+    z-index: 0;
+    margin-right: -17px;
+    margin-top: -5px;
+    max-height: 236px;
+    background-color: transparent;
+}
