--- a/css/extra/Sunrise/style.css
+++ b/css/extra/Sunrise/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,500,700");
-@import url('https://nfld99.github.io/Better-Discord/Source_Code/Addons/Use_Fonts/DiscordFont.css');
+@import url('https://hadi.js.org/css/extra/Sunrise/fonts/google.css');
 @font-face {
     font-family: 'aviny';
     src: url('./fonts/aviny.eot');
