--- a/css/extra/Sunrise/style.css
+++ b/css/extra/Sunrise/style.css
@@ -55,7 +55,7 @@ body {
 .user {
     font-size: 30px;
     margin-top: -50px;
-    font-family: cursive;
+    font-family: 'aviny';
     text-align: center;
     text-shadow: 1px 1px 2px black, 0 0 25px black, 0 0 5px black;
     color: white;
@@ -63,7 +63,7 @@ body {
 
 .sun {
     font-size: 50px;
-    font-family: "Discord";
+    font-family: 'aviny';
     text-align: center;
     text-shadow: 1px 1px 2px black, 0 0 25px black, 0 0 5px black;
     color: #ff8700;
