--- a/css/extra/Sunrise/style.css
+++ b/css/extra/Sunrise/style.css
@@ -63,6 +63,7 @@ body {
 
 .sun {
     font-size: 50px;
+    margin-top: -50px;
     font-family: 'aviny';
     text-align: center;
     text-shadow: 1px 1px 2px black, 0 0 25px black, 0 0 5px black;
